--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
-        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+        <div class="collapse navbar-collapse d-flex justify-content-center gap-5" id="navbarNav">
             <a class="navbar-brand" href="#"><img src = "images/logo.png" alt = "glowupLogo" style="width: 120px; height: 60px;"></a>
-            <ul class="navbar-nav">
+            <ul class="navbar-nav gap-5">
                 <li class="nav-item active">
                     <a class="nav-link" href="index.html">Home</a>
                 </li>
@@ -23,7 +23,60 @@
                     <a class="nav-link" href="contact.html">Contact</a>
                 </li>
             </ul>
+            <div class="dropdown">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                    Login
+                </button>
+                <form class="dropdown-menu p-4">
+                <div class="mb-3">
+                    <label for="exampleDropdownFormEmail2" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleDropdownFormEmail2" placeholder="email@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleDropdownFormPassword2" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleDropdownFormPassword2" placeholder="Password">
+                </div>
+                <a href = "#">Sign Up</a>
+                <div class="mb-3">
+                    <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="dropdownCheck2">
+                    <label class="form-check-label" for="dropdownCheck2">
+                    Remember me
+                    </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Sign in</button>
+                </form>
+            </div>
         </div>
     </nav>
+    <div class = "homepage-background">
+        <img style="height: 800px; width: 100%; opacity: 50%;" src = "images/background1.avif" alt = "kitchen">
+        <h1 class = "center-text1">#2 Cleaning Service</h1>
+        <h1 class = "center-text2">& Moving Service</h1>
+    </div>
+    <div class = "review-container">
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                <img src="images/homepage-background.avif" class="d-block w-20" alt="...">
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+                <img src="images/homepage-background.avif" class="d-block w-20" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="images/homepage-background.avif" class="d-block w-20" alt="...">
+            </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
 </body>
 </html>
