--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel = "stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary ">
+    <nav class="navbar navbar-expand-lg ">
         <div class="collapse navbar-collapse d-flex justify-content-center gap-5" id="navbarNav">
             <a class="navbar-brand" href="#"><img src = "images/logo.png" alt = "glowupLogo" style="width: 120px; height: 60px;"></a>
             <ul class="navbar-nav gap-5">
                 <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class=" disabled nav-link" href="#">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ">
                     <a class="nav-link" href="booking.html">Book Now</a>
                 </li>
                 <li class="nav-item">
@@ -24,7 +25,7 @@
                 </li>
             </ul>
             <div class="dropdown">
-                <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
+                <button type="button" class="btn dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-auto-close="outside">
                     Login
                 </button>
                 <form class="dropdown-menu p-4">
@@ -54,18 +55,51 @@
         <img style="height: 800px; width: 100%; opacity: 50%;" src = "images/background1.avif" alt = "kitchen">
         <h1 class = "center-text1">#2 Cleaning Service</h1>
         <h1 class = "center-text2">& Moving Service</h1>
+        <button style="height: 80px; width: 400px; font-size: 30px;" type="submit" class="btn btn-primary center-button">Make an Appointment</button>
+    </div>
+    <div class = "row d-flex justify-content-center gap-5" style="height: 350px; padding: 50px 100px 50px; background-color: #8ECAE6;">
+        <div class = "col box">
+            <h2 style="color: #023047;">Derick Brick</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed tellus vel velit varius fermentum ut eu enim. Integer condimentum et tortor a ultrices. Phasellus imperdiet sagittis libero, ac porttitor arcu molestie sit amet. Maecenas ornare lacus libero, vitae malesuada dolor vehicula in. Proin et dapibus sem. Maecenas aliquam elit a magna mattis imperdiet. Nulla a magna non erat posuere elementum ullamcorper in quam. </p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+        </div>
+        <div class = "col box">
+            <h2>Betty Real</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed tellus vel velit varius fermentum ut eu enim. Integer condimentum et tortor a ultrices. Phasellus imperdiet sagittis libero, ac porttitor arcu molestie sit amet. Maecenas ornare lacus libero, vitae malesuada dolor vehicula in. Proin et dapibus sem. Maecenas aliquam elit a magna mattis imperdiet. Nulla a magna non erat posuere elementum ullamcorper in quam. </p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+        </div>
+        <div class = "col box">
+            <h2>Terry Crews</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean sed tellus vel velit varius fermentum ut eu enim. Integer condimentum et tortor a ultrices. Phasellus imperdiet sagittis libero, ac porttitor arcu molestie sit amet. Maecenas ornare lacus libero, vitae malesuada dolor vehicula in. Proin et dapibus sem. Maecenas aliquam elit a magna mattis imperdiet. Nulla a magna non erat posuere elementum ullamcorper in quam. </p>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+            <span class="fa fa-star checked"></span>
+        </div>
     </div>
     <div class = "review-container">
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                <img src="images/homepage-background.avif" class="d-block w-20" alt="...">
+                <img src="images/kitchen1.avif" class="d-block w-100" style="height: 1200px;" alt="kitchen1">
             </div>
             <div class="carousel-item" data-bs-interval="2000">
-                <img src="images/homepage-background.avif" class="d-block w-20" alt="...">
+                <img src="images/kitchen2.avif" class="d-block w-100" style="height: 1200px;"alt="kitchen2">
             </div>
             <div class="carousel-item">
-                <img src="images/homepage-background.avif" class="d-block w-20" alt="...">
+                <img src="images/kitchen3.avif" class="d-block w-100" style="height: 1200px;"alt="kitchen3">
+            </div>
+            <div class="carousel-item">
+                <img src="https://videos.pexels.com/video-files/3444432/3444432-hd_1920_1080_30fps.mp4" class="d-block w-100" style="height: 1200px;"alt="kitchen3">
             </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
@@ -77,6 +111,45 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+    </div>
+    <div style="background-color: #8ECAE6;" class = "price-container">
+        <h1>Pricing</h1>
+        <table style="background-color: #8ECAE6;" class="table">
+            <thead>
+                <tr >
+                    <th scope="col">Square Foot</th>
+                    <th scope="col">Light Clean</th>
+                    <th scope="col">Alright Clean</th>
+                    <th scope="col">Deep Cleaning</th>
+                </tr>   
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1,500sq</th>
+                    <td>100$</td>
+                    <td>300$</td>
+                    <td>500$</td>
+                </tr>
+                <tr>
+                    <th scope="row">3,000sq</th>
+                    <td>500$</td>
+                    <td>1,000$</td>
+                    <td>1,500$</td>
+                </tr>
+                <tr>
+                    <th scope="row">4,500sq</th>
+                    <td>1,000$</td>
+                    <td>2,000$</td>
+                    <td>3,000$</td>
+                </tr>
+                <tr>
+                    <th scope="row">6,000sq</th>
+                    <td>2,000$</td>
+                    <td>4,000$</td>
+                    <td>6,000$</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </body>
 </html>
